--- a/themes/business/layouts/_default/leistungen.html
+++ b/themes/business/layouts/_default/leistungen.html
@@ -3,7 +3,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-9 mx-auto">
-                        <div class="cta-inner bg-faded text-center rounded">
+                        <div class="cta-inner bg-faded rounded">
                             <h2 class="section-heading mb-4">
                                 <span class="section-heading-upper">{{ .Title }}</span>
                                 <span class="section-heading-lower">{{.Params.description }}</span>
