--- a/themes/business/layouts/partials/footer.html
+++ b/themes/business/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer text-faded text-center py-5">
-  <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
+  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König; <a href="/impressum">Impressum</a></p></div>
 </footer>
 
 <!-- Bootstrap core JS-->
