--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7724,7 +7724,7 @@ textarea.form-control-lg {
 }
 
 .p-5 {
-  padding: 3rem !important;
+  padding: 1.5rem !important;
 }
 
 .px-0 {
@@ -10895,14 +10895,14 @@ p {
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 #mainNav .navbar-brand {
-  color: #e6a756;
+  color: #fff;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   color: rgba(255, 255, 255, 0.9);
   font-weight: 800;
 }
 #mainNav .navbar-nav .nav-item.active .nav-link {
-  color: #e6a756;
+  color: #fff;
 }
 @media (min-width: 992px) {
   #mainNav .navbar-nav .nav-item .nav-link {
@@ -10963,12 +10963,12 @@ p {
 }
 @media (min-width: 992px) {
   .intro .intro-img {
-    width: 75%;
+    width: 65%;
     float: right;
   }
   .intro .intro-text {
     left: 0;
-    width: 60%;
+    width: 50%;
     margin-top: 3rem;
     position: absolute;
   }
@@ -10981,7 +10981,7 @@ p {
 }
 @media (min-width: 1200px) {
   .intro .intro-text {
-    width: 45%;
+    width: 40%;
   }
 }
 
