--- a/themes/business/layouts/_default/home.html
+++ b/themes/business/layouts/_default/home.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-9 mx-auto">
-                <div class="cta-inner bg-faded text-center rounded">
+                <div class="cta-inner bg-faded rounded">
                     <h2 class="section-heading mb-4">
                         <span class="section-heading-upper">{{ $vita.Title }}</span>
                         <span class="section-heading-lower">{{ $vita.Params.description }}</span>
