--- a/themes/business/layouts/_default/wahlaerztin.html
+++ b/themes/business/layouts/_default/wahlaerztin.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-9 mx-auto">
-                <div class="cta-inner bg-faded text-center rounded">
+                <div class="cta-inner bg-faded rounded">
                     <h2 class="section-heading mb-4">
                         <!--<span class="section-heading-upper">Our Promise</span>-->
                         <span class="section-heading-lower">{{ $wahl2.Params.description }}</span>
