--- a/themes/business/layouts/partials/header.html
+++ b/themes/business/layouts/partials/header.html
@@ -6,8 +6,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-        {{ .Site.Params.subtitle }}
-        <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">{{ .Site.Params.subtitle2 }}</a>
+        {{ .Site.Params.subtitle }}</br>
+        {{ .Site.Params.subtitle2 }}
+        <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Dr. Med. Heidi Graber-König</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
         </button>
