--- a/themes/business/assets/css/main.css
+++ b/themes/business/assets/css/main.css
@@ -1,4 +1,4 @@
-F@charset "UTF-8";
+@charset "UTF-8";
 /*!
 * Start Bootstrap - Business Casual v7.0.9 (https://startbootstrap.com/theme/business-casual)
 * Copyright 2013-2023 Start Bootstrap
@@ -10939,7 +10939,7 @@ p {
 }
 .cta .cta-inner {
   position: relative;
-  padding: 1.5rem;
+  padding: 3rem;
   margin: 0.5rem;
 }
 .cta .cta-inner:before {
