--- a/themes/business/layouts/partials/header.html
+++ b/themes/business/layouts/partials/header.html
@@ -8,7 +8,9 @@
     <div class="container">
       <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Dr. Med. Heidi Graber-König</a>
 
-
+        {{ .Site.Params.subtitle }}
+       </br>
+      {{ .Site.Params.subtitle2 }}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
         </button>
