--- a/themes/business/layouts/partials/header.html
+++ b/themes/business/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <h1 class="site-heading text-center text-faded d-none d-lg-block">
      <span class="site-heading-upper text-primary mb-3">{{ .Site.Params.subtitle }}</span>
-     <span class="site-heading-upper text-primary mb-3">{{ .Site.Params.subtitle2 }}</span>
+     <!-- <span class="site-heading-upper text-primary mb-3">{{ .Site.Params.subtitle2 }}</span> -->
      <span class="site-heading-lower">{{ .Site.Title }}</span>
  </h1>
 
@@ -9,8 +9,8 @@
       <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Dr. Med. Heidi Graber-König</a>
 
         {{ .Site.Params.subtitle }}
-       </br>
-      {{ .Site.Params.subtitle2 }}
+       <!-- </br> -->
+      <!-- {{ .Site.Params.subtitle2 }} -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
         </button>
